[package]
authors = ["Neil Ashford <ashfordneil0@gmail.com>"]
name = "class-queue"
version = "0.1.0"
[dependencies]
mio = "0.6.14"
rustls = "0.12.0"
tungstenite = { version = "0.5.3", default_features = false }
log = "0.4.1"
simple_logger = "0.5.0"
serde_derive = "1.0.35"
serde = "1.0.35"
toml = "0.4.5"
