[package]
name = "class-queue"
version = "0.1.0"
authors = ["Neil Ashford <ashfordneil0@gmail.com>"]

[dependencies]
mio = "0.6.14"
rustls = "0.12.0"
httparse = "1.2.4"
tungstenite = { version = "0.5.3", default_features = false }
slab = "0.4.0"
log = "0.4.1"
serde = "1.0.36"
serde_derive = "1.0.36"
toml = "0.4.5"
quick-error = "1.2.1"
env_logger = "0.5.6"
