[package]
authors = ["Neil Ashford <ashfordneil0@gmail.com>"]
name = "class-queue-backend"
version = "0.1.0"

[dependencies]
bcrypt = "0.2.0"
bytes = "0.4.6"
either = "1.5.0"
env_logger = "0.5.6"
futures = "0.1.0"
harsh = "0.1.4"
hyper = "0.11.25"
lazy_static = "1.0.0"
log = "0.4.1"
rand = "0.4.2"
serde = "1.0.37"
serde_derive = "1.0.37"
serde_json = "1.0.13"
tokio = "0.1.5"
tokio-core = "0.1.16"
tokio-io = "0.1.6"
toml = "0.4.6"
unicase = "2.1.0"
websocket = "0.20.2"
